--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -19,7 +19,7 @@ jobs:
           
       - name: install python packages
         run: |
-          python -m pip install --upgrade pip\
+          python3 -m pip install --upgrade pip\
           pip install -r requirements.txt
           
       - name: execute py script # run main.py
