--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,26 @@
+certifi==2020.12.5
+chardet==4.0.0
+colorama==0.4.4
+configparser==5.0.1
+crayons==0.4.0
+idna==2.10
+numpy==1.23.4
+packaging==21.3
+pandas==1.5.1
+patsy==0.5.3
+Pillow==9.2.0
+plotly==5.11.0
+plotly-express==0.4.1
+pygame==2.1.2
+pyparsing==3.0.9
+python-dateutil==2.8.2
+pytz==2022.6
 requests==2.25.1
+scipy==1.9.3
+selenium==3.141.0
+six==1.16.0
+statsmodels==0.13.5
+tenacity==8.1.0
 urlfetch==1.2.2
+urllib3==1.26.2
+webdriver-manager==3.2.2
